CliClient/tests/fuzzing.ITEMCOUNTDIFF/client0/log-sync.txt
2017-07-01 13:09:38: Starting synchronization... [1498910978635]
2017-07-01 13:09:38: Sync: createRemote: remote does not exist, and local is new and has never been synced: (Local 68cba53569c84bfbad79eee85402160b, "Notebook")
2017-07-01 13:09:38: Sync: deleteRemote: local has been deleted: (Remote 351b927410b541e1a6d1a2a88ef7d1c0)
2017-07-01 13:09:39: Synchronization complete [1498910978635]:
2017-07-01 13:09:39: remotesToUpdate: 1
2017-07-01 13:09:39: remotesToDelete: 1
2017-07-01 13:09:39: localsToUdpate: -
2017-07-01 13:09:39: localsToDelete: -
2017-07-01 13:09:39: createLocal: -
2017-07-01 13:09:39: updateLocal: -
2017-07-01 13:09:39: deleteLocal: -
2017-07-01 13:09:39: createRemote: 1
2017-07-01 13:09:39: updateRemote: -
2017-07-01 13:09:39: deleteRemote: 1
2017-07-01 13:09:39: folderConflict: -
2017-07-01 13:09:39: noteConflict: -
2017-07-01 13:09:39: Total folders: 1
2017-07-01 13:09:39: Total notes: 0
2017-07-01 13:09:42: Starting synchronization... [1498910982477]
2017-07-01 13:09:42: Sync: createLocal: remote exists but local does not: (Remote 7711fd1e399e4219ba8f5f9e9eeefb16, "Notebook")
2017-07-01 13:09:42: Synchronization complete [1498910982477]:
2017-07-01 13:09:42: remotesToUpdate: -
2017-07-01 13:09:42: remotesToDelete: -
2017-07-01 13:09:42: localsToUdpate: 1
2017-07-01 13:09:42: localsToDelete: -
2017-07-01 13:09:42: createLocal: 1
2017-07-01 13:09:42: updateLocal: -
2017-07-01 13:09:42: deleteLocal: -
2017-07-01 13:09:42: createRemote: -
2017-07-01 13:09:42: updateRemote: -
2017-07-01 13:09:42: deleteRemote: -
2017-07-01 13:09:42: folderConflict: -
2017-07-01 13:09:42: noteConflict: -
2017-07-01 13:09:42: Total folders: 2
2017-07-01 13:09:42: Total notes: 0
2017-07-01 13:09:45: Starting synchronization... [1498910985800]
2017-07-01 13:09:45: Sync: updateRemote: local has changes: (Local 7711fd1e399e4219ba8f5f9e9eeefb16, "Notebook-1498910969408-979"): (Remote )
2017-07-01 13:09:46: Sync: updateLocal: remote is more recent than local: (Local 68cba53569c84bfbad79eee85402160b, "Notebook"): (Remote 68cba53569c84bfbad79eee85402160b, "Notebook-1498910969401-461")
2017-07-01 13:09:46: Synchronization complete [1498910985800]:
2017-07-01 13:09:46: remotesToUpdate: 1
2017-07-01 13:09:46: remotesToDelete: -
2017-07-01 13:09:46: localsToUdpate: 1
2017-07-01 13:09:46: localsToDelete: -
2017-07-01 13:09:46: createLocal: -
2017-07-01 13:09:46: updateLocal: 1
2017-07-01 13:09:46: deleteLocal: -
2017-07-01 13:09:46: createRemote: -
2017-07-01 13:09:46: updateRemote: 1
2017-07-01 13:09:46: deleteRemote: -
2017-07-01 13:09:46: folderConflict: -
2017-07-01 13:09:46: noteConflict: -
2017-07-01 13:09:46: Total folders: 2
2017-07-01 13:09:46: Total notes: 0
2017-07-01 13:09:55: Starting synchronization... [1498910995526]
2017-07-01 13:09:55: Sync: deleteRemote: local has been deleted: (Remote 68cba53569c84bfbad79eee85402160b)
2017-07-01 13:09:55: Synchronization complete [1498910995526]:
2017-07-01 13:09:55: remotesToUpdate: -
2017-07-01 13:09:55: remotesToDelete: 1
2017-07-01 13:09:55: localsToUdpate: -
2017-07-01 13:09:55: localsToDelete: -
2017-07-01 13:09:55: createLocal: -
2017-07-01 13:09:55: updateLocal: -
2017-07-01 13:09:55: deleteLocal: -
2017-07-01 13:09:55: createRemote: -
2017-07-01 13:09:55: updateRemote: -
2017-07-01 13:09:55: deleteRemote: 1
2017-07-01 13:09:55: folderConflict: -
2017-07-01 13:09:55: noteConflict: -
2017-07-01 13:09:55: Total folders: 1
2017-07-01 13:09:55: Total notes: 0
2017-07-01 13:09:58: Starting synchronization... [1498910998834]
2017-07-01 13:09:58: Sync: deleteLocal: remote has been deleted: (Local 7711fd1e399e4219ba8f5f9e9eeefb16)
2017-07-01 13:09:58: Error: Cannot delete the last notebook
Error: Cannot delete the last notebook
    at Function._callee$ (/mnt/d/Web/www/joplin/CliClient/app/lib/models/folder.js:59:25)
    at tryCatch (/mnt/d/Web/www/joplin/CliClient/node_modules/regenerator-runtime/runtime.js:65:40)
    at GeneratorFunctionPrototype.invoke [as _invoke] (/mnt/d/Web/www/joplin/CliClient/node_modules/regenerator-runtime/runtime.js:303:22)
    at GeneratorFunctionPrototype.prototype.(anonymous function) [as next] (/mnt/d/Web/www/joplin/CliClient/node_modules/regenerator-runtime/runtime.js:117:21)
    at step (/mnt/d/Web/www/joplin/CliClient/node_modules/babel-runtime/helpers/asyncToGenerator.js:17:30)
    at /mnt/d/Web/www/joplin/CliClient/node_modules/babel-runtime/helpers/asyncToGenerator.js:28:13
    at process._tickCallback (internal/process/next_tick.js:109:7)
2017-07-01 13:10:01: Starting synchronization... [1498911001597]
2017-07-01 13:10:01: Sync: deleteLocal: remote has been deleted: (Local 7711fd1e399e4219ba8f5f9e9eeefb16)
2017-07-01 13:10:01: Error: Cannot delete the last notebook
Error: Cannot delete the last notebook
    at Function._callee$ (/mnt/d/Web/www/joplin/CliClient/app/lib/models/folder.js:59:25)
    at tryCatch (/mnt/d/Web/www/joplin/CliClient/node_modules/regenerator-runtime/runtime.js:65:40)
    at GeneratorFunctionPrototype.invoke [as _invoke] (/mnt/d/Web/www/joplin/CliClient/node_modules/regenerator-runtime/runtime.js:303:22)
    at GeneratorFunctionPrototype.prototype.(anonymous function) [as next] (/mnt/d/Web/www/joplin/CliClient/node_modules/regenerator-runtime/runtime.js:117:21)
    at step (/mnt/d/Web/www/joplin/CliClient/node_modules/babel-runtime/helpers/asyncToGenerator.js:17:30)
    at /mnt/d/Web/www/joplin/CliClient/node_modules/babel-runtime/helpers/asyncToGenerator.js:28:13
    at process._tickCallback (internal/process/next_tick.js:109:7)
